--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-routerpp",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Similar to angular routing configuration, but not very similar",
   "private": false,
   "main": "./dist/umd/react-routerpp.js",
@@ -13,6 +13,10 @@
     "build": "npm run umd && npm run esm"
   },
   "keywords": [
+    "react",
+    "router",
+    "react router",
+    "react router config",
     "Ajanuw"
   ],
   "author": "Ajanuw",
